src/objects/BFM_Occurrence_SES__c.object
<CustomObject>
    <fields>
        <fullName>Accouting_Account__c</fullName>
        <label>Accouting Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acctount_Assingment_Category__c</fullName>
        <label>Acctount Assingment Category</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFOP__c</fullName>
        <label>CFOP</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COFINS_Aliquot__c</fullName>
        <label>COFINS Aliquot</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>COFINS_Calculation_Base__c</fullName>
        <label>COFINS Calculation Base</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COFINS_Value__c</fullName>
        <label>COFINS Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COFINS_law__c</fullName>
        <label>COFINS law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_e__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CT-e</label>
        <referenceTo>BFM_CT_e__c</referenceTo>
        <relationshipLabel>Occurrence SES</relationshipLabel>
        <relationshipName>Occurrence_SES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Document_Number__c</fullName>
        <label>Cost Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Upload_Date_Time__c</fullName>
        <label>Document Upload Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gross_Value_net_tax__c</fullName>
        <label>Gross Value (net+tax)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICMS_Aliquot__c</fullName>
        <label>ICMS Aliquot</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ICMS_Calculation_Base__c</fullName>
        <label>ICMS Calculation Base</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICMS_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICMS Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICMS_Law__c</fullName>
        <label>ICMS Law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICMS_Presumed_Credit__c</fullName>
        <label>ICMS Presumed Credit</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICMS_Reduzed_base_percentage__c</fullName>
        <label>ICMS Reduzed base percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICMS_ST__c</fullName>
        <label>ICMS ST</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICMS_Value__c</fullName>
        <label>ICMS Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPI_law__c</fullName>
        <label>IPI law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISS_Aliquot__c</fullName>
        <label>ISS Aliquot</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISS_Calculation_base__c</fullName>
        <label>ISS Calculation base</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISS_Value__c</fullName>
        <label>ISS Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Order__c</fullName>
        <label>Internal Order</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification_Date__c</fullName>
        <label>Modification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NFS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFS</label>
        <referenceTo>BFM_NFS__c</referenceTo>
        <relationshipLabel>Occurrence SES</relationshipLabel>
        <relationshipName>Occurrence_SES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occurrence_Number__c</fullName>
        <label>Occurrence Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence</label>
        <referenceTo>BFM_Occurrence__c</referenceTo>
        <relationshipLabel>Occurrence SES</relationshipLabel>
        <relationshipName>Occurrence_SES</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PIS_Aliquot__c</fullName>
        <label>PIS Aliquot</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PIS_Calculation_Base__c</fullName>
        <label>PIS Calculation Base</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIS_Value__c</fullName>
        <label>PIS Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIS_law__c</fullName>
        <label>PIS law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Type__c</fullName>
        <label>PO Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Umbrella_Number__c</fullName>
        <label>PO Umbrella Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register_Creation_Responsible_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Register Creation Responsible User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Occurrence_SES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SES_Currency__c</fullName>
        <label>SES Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SES_Line_Description__c</fullName>
        <label>SES Line Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SES_Number__c</fullName>
        <externalId>true</externalId>
        <label>SES Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SES_Plant_Code__c</fullName>
        <label>SES Plant Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Type__c</fullName>
        <label>Shipment Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>BFM_Shipment__c</referenceTo>
        <relationshipLabel>Occurrence SES</relationshipLabel>
        <relationshipName>Occurrence_SES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Simple_Option__c</fullName>
        <label>Simple Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage</label>
        <referenceTo>BFM_Stage__c</referenceTo>
        <relationshipLabel>Occurrence SES</relationshipLabel>
        <relationshipName>Occurrence_SES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Code_Picklist__c</fullName>
        <label>Tax Code Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>s0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilever_company_code__c</fullName>
        <formula>Stage__r.Unilever_Account__r.Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unilever company code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Stage__r.Shipment__r.Carrier_Account__r.Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <label>Occurrence SES</label>
    <nameField>
        <displayFormat>OccSES-{000}</displayFormat>
        <label>Occurrence SES Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occurrence SES</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>